Buttons nowrap styles fix

--- a/wp-content/themes/aigi/assets/css/style.css
+++ b/wp-content/themes/aigi/assets/css/style.css
@@ -1178,6 +1178,7 @@ input[type="submit"].btn-body {
     box-sizing: border-box;
     position: relative;
     cursor: pointer;
+    white-space: nowrap;
 }
 .btn-inner {
     display: inline-block;
